Update Spotify Data Pipeline .ipynb

--- a/Spotify Data Pipeline .ipynb
+++ b/Spotify Data Pipeline .ipynb
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client_credentials_manager = SpotifyClientCredentials(client_id=\"f4c1514228094652a8a5470b9cdff012\",client_secret=\"c602a8f734e84a6891a187dc74089155\")"
+    "client_credentials_manager = SpotifyClientCredentials(client_id=\"\",client_secret=\"\")"
    ]
   },
   {
